Add chapter 3 materials/methods and references

--- a/source/references.bib
+++ b/source/references.bib
@@ -150,6 +150,49 @@
  doi = {10.1016/j.jip.2011.11.002}
 }
 
+@article{Bentivenha_2018,
+ author = {Bentivenha, José P F and Rodrigues, Juliana G and Lima, Marcelo F and Marçon, Paula and Popham, Holly J R and Omoto, Celso},
+ title = {Baseline Susceptibility ofSpodoptera frugiperda(Lepidoptera: Noctuidae) to SfMNPV and Evaluation of Cross-Resistance to Major Insecticides and Bt Proteins},
+ journal = {Journal of Economic Entomology},
+ publisher = {Oxford University Press (OUP)},
+ year = {2018},
+ month = {nov},
+ number = {1},
+ volume = {112},
+ pages = {91--98},
+ url = {https://doi.org/10.1093%2Fjee%2Ftoy342},
+ doi = {10.1093/jee/toy342}
+}
+
+@article{Bernardi_2015,
+ author = {Bernardi, Daniel and Salmeron, Eloisa and Horikoshi, Renato Jun and Bernardi, Oderlei and Dourado, Patrick Marques and Carvalho, Renato Assis and Martinelli, Samuel and Head, Graham P. and Omoto, Celso},
+ title = {Cross-Resistance between Cry1 Proteins in Fall Armyworm (Spodoptera frugiperda) May Affect the Durability of Current Pyramided Bt Maize Hybrids in Brazil},
+ journal = {PLOS ONE},
+ publisher = {Public Library of Science (PLoS)},
+ year = {2015},
+ month = {oct},
+ number = {10},
+ volume = {10},
+ pages = {e0140130},
+ url = {https://doi.org/10.1371%2Fjournal.pone.0140130},
+ doi = {10.1371/journal.pone.0140130},
+ editor = {Jurat-Fuentes, Juan Luis}
+}
+
+@article{Berretta_1998,
+ author = {Berretta, Marcelo F and Rios, Marta L and de Cap, Alicia Sciocco},
+ title = {Characterization of a Nuclear Polyhedrosis Virus ofSpodoptera frugiperdafrom Argentina},
+ journal = {Journal of Invertebrate Pathology},
+ publisher = {Elsevier BV},
+ year = {1998},
+ month = {may},
+ number = {3},
+ volume = {71},
+ pages = {280--282},
+ url = {https://doi.org/10.1006%2Fjipa.1997.4731},
+ doi = {10.1006/jipa.1997.4731}
+}
+
 @article{Blissard_2018,
  author = {Blissard, Gary W. and Theilmann, David A.},
  title = {Baculovirus Entry and Egress from Insect Cells},
@@ -291,6 +334,19 @@
  doi = {10.1002/ps.4660}
 }
 
+@article{Camacho_2009,
+ author = {Camacho, Christiam and Coulouris, George and Avagyan, Vahram and Ma, Ning and Papadopoulos, Jason and Bealer, Kevin and Madden, Thomas L},
+ title = {BLAST$\mathplus$: architecture and applications},
+ journal = {BMC Bioinformatics},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2009},
+ number = {1},
+ volume = {10},
+ pages = {421},
+ url = {https://doi.org/10.1186%2F1471-2105-10-421},
+ doi = {10.1186/1471-2105-10-421}
+}
+
 @article{Carvalho_2013,
  author = {Carvalho, Renato A. and Omoto, Celso and Field, Linda M. and Williamson, Martin S. and Bass, Chris},
  title = {Investigating the Molecular Mechanisms of Organophosphate and Pyrethroid Resistance in the Fall Armyworm Spodoptera frugiperda},
@@ -306,6 +362,20 @@
  editor = {Vontas, John}
 }
 
+@article{Chateigner_2015,
+ author = {Chateigner, Aurélien and Bézier, Annie and Labrousse, Carole and Jiolle, Davy and Barbe, Valérie and Herniou, Elisabeth},
+ title = {Ultra Deep Sequencing of a Baculovirus Population Reveals Widespread Genomic Variations},
+ journal = {Viruses},
+ publisher = {MDPI AG},
+ year = {2015},
+ month = {jul},
+ number = {7},
+ volume = {7},
+ pages = {3625--3646},
+ url = {https://doi.org/10.3390%2Fv7072788},
+ doi = {10.3390/v7072788}
+}
+
 @article{Chen_2012,
  author = {Chen, Lin and Hu, Xiaolong and Xiang, Xingwei and Yu, Shaofang and Yang, Rui and Wu, Xiaofeng},
  title = {Autographa californica multiple nucleopolyhedrovirus odv-e25 (Ac94) is required for budded virus infectivity and occlusion-derived virus formation},
@@ -318,6 +388,48 @@
  pages = {617--625},
  url = {https://doi.org/10.1007%2Fs00705-011-1211-9},
  doi = {10.1007/s00705-011-1211-9}
+}
+
+@article{Chen_2018,
+ author = {Chen, Shifu and Zhou, Yanqing and Chen, Yaru and Gu, Jia},
+ title = {fastp: an ultra-fast all-in-one FASTQ preprocessor},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2018},
+ month = {sep},
+ number = {17},
+ volume = {34},
+ pages = {i884--i890},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbty560},
+ doi = {10.1093/bioinformatics/bty560}
+}
+
+@article{Cingolani_2012,
+ author = {Cingolani, Pablo and Platts, Adrian and Wang, Le Lily and Coon, Melissa and Nguyen, Tung and Wang, Luan and Land, Susan J. and Lu, Xiangyi and Ruden, Douglas M.},
+ title = {A program for annotating and predicting the effects of single nucleotide polymorphisms, SnpEff},
+ journal = {Fly},
+ publisher = {Informa UK Limited},
+ year = {2012},
+ month = {apr},
+ number = {2},
+ volume = {6},
+ pages = {80--92},
+ url = {https://doi.org/10.4161%2Ffly.19695},
+ doi = {10.4161/fly.19695}
+}
+
+@article{Clavijo_2009,
+ author = {Clavijo, Gabriel and Williams, Trevor and Simoń, Oihane and Muñoz, Delia and Cerutti, Martine and Loṕez-Ferber, Miguel and Caballero, Primitivo},
+ title = {Mixtures of Complete and pif1- and pif2-Deficient Genotypes Are Required for Increased Potency of an Insect Nucleopolyhedrovirus},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2009},
+ month = {mar},
+ number = {10},
+ volume = {83},
+ pages = {5127--5136},
+ url = {https://doi.org/10.1128%2Fjvi.02020-08},
+ doi = {10.1128/jvi.02020-08}
 }
 
 @article{Coulibaly_2009,
@@ -416,6 +528,21 @@
  pages = {47--57},
  url = {https://doi.org/10.1016%2Fj.virusres.2016.05.005},
  doi = {10.1016/j.virusres.2016.05.005}
+}
+
+@article{Eaton_2019,
+ author = {Eaton, Deren A. R.},
+ title = {Toytree: A minimalist tree visualization and manipulation library for Python},
+ journal = {Methods in Ecology and Evolution},
+ publisher = {Wiley},
+ year = {2019},
+ month = {nov},
+ number = {1},
+ volume = {11},
+ pages = {187--191},
+ url = {https://doi.org/10.1111%2F2041-210x.13313},
+ doi = {10.1111/2041-210x.13313},
+ editor = {Matschiner, Michael}
 }
 
 @article{Eddy_2011,
@@ -672,6 +799,61 @@
  doi = {10.1099/jgv.0.001107}
 }
 
+@article{Harrison_2019,
+ author = {Harrison, Rhett D. and Thierfelder, Christian and Baudron, Frédéric and Chinwada, Peter and Midega, Charles and Schaffner, Urs and den Berg, Johnnie van},
+ title = {Agro-ecological options for fall armyworm (Spodoptera frugiperda JE Smith) management: Providing low-cost, smallholder friendly solutions to an invasive pest},
+ journal = {Journal of Environmental Management},
+ publisher = {Elsevier BV},
+ year = {2019},
+ month = {aug},
+ volume = {243},
+ pages = {318--330},
+ url = {https://doi.org/10.1016%2Fj.jenvman.2019.05.011},
+ doi = {10.1016/j.jenvman.2019.05.011}
+}
+
+@article{Hill_2017,
+ author = {Hill, Tom and Unckless, Robert L.},
+ title = {Baculovirus Molecular Evolution via Gene Turnover and Recurrent Positive Selection of Key Genes},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2017},
+ month = {aug},
+ number = {22},
+ volume = {91},
+ url = {https://doi.org/10.1128%2Fjvi.01319-17},
+ doi = {10.1128/jvi.01319-17},
+ editor = {Pfeiffer, Julie K.}
+}
+
+@article{Hoang_2017,
+ author = {Hoang, Diep Thi and Chernomor, Olga and Haeseler, Arndt von and Minh, Bui Quang and Vinh, Le Sy},
+ title = {UFBoot2: Improving the Ultrafast Bootstrap Approximation},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2017},
+ month = {oct},
+ number = {2},
+ volume = {35},
+ pages = {518--522},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmsx281},
+ doi = {10.1093/molbev/msx281}
+}
+
+@article{Holmes_2011,
+ author = {Holmes, E. C.},
+ title = {What Does Virus Evolution Tell Us about Virus Origins?},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2011},
+ month = {mar},
+ number = {11},
+ volume = {85},
+ pages = {5247--5251},
+ url = {https://doi.org/10.1128%2Fjvi.02203-10},
+ doi = {10.1128/jvi.02203-10}
+}
+
 @article{Hou_2012,
  author = {Hou, D. and Zhang, L. and Deng, F. and Fang, W. and Wang, R. and Liu, X. and Guo, L. and Rayner, S. and Chen, X. and Wang, H. and Hu, Z.},
  title = {Comparative Proteomics Reveal Fundamental Structural and Functional Differences between the Two Progeny Phenotypes of a Baculovirus},
@@ -829,6 +1011,62 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  doi = {10.1017/s1742758400022591}
 }
 
+@article{Jones_2014,
+ author = {Jones, P. and Binns, D. and Chang, H. -Y. and Fraser, M. and Li, W. and McAnulla, C. and McWilliam, H. and Maslen, J. and Mitchell, A. and Nuka, G. and Pesseat, S. and Quinn, A. F. and Sangrador-Vegas, A. and Scheremetjew, M. and Yong, S. -Y. and Lopez, R. and Hunter, S.},
+ title = {InterProScan 5: genome-scale protein function classification},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2014},
+ month = {jan},
+ number = {9},
+ volume = {30},
+ pages = {1236--1240},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbtu031},
+ doi = {10.1093/bioinformatics/btu031}
+}
+
+@article{K_ster_2018,
+ author = {Köster, Johannes and Rahmann, Sven},
+ title = {Snakemake—a scalable bioinformatics workflow engine},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2018},
+ month = {may},
+ number = {20},
+ volume = {34},
+ pages = {3600--3600},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbty350},
+ doi = {10.1093/bioinformatics/bty350}
+}
+
+@article{Kalyaanamoorthy_2017,
+ author = {Kalyaanamoorthy, Subha and Minh, Bui Quang and Wong, Thomas K F and Haeseler, Arndt von and Jermiin, Lars S},
+ title = {ModelFinder: fast model selection for accurate phylogenetic estimates},
+ journal = {Nature Methods},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2017},
+ month = {may},
+ number = {6},
+ volume = {14},
+ pages = {587--589},
+ url = {https://doi.org/10.1038%2Fnmeth.4285},
+ doi = {10.1038/nmeth.4285}
+}
+
+@article{Katoh_2013,
+ author = {Katoh, K. and Standley, D. M.},
+ title = {MAFFT Multiple Sequence Alignment Software Version 7: Improvements in Performance and Usability},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2013},
+ month = {jan},
+ number = {4},
+ volume = {30},
+ pages = {772--780},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmst010},
+ doi = {10.1093/molbev/mst010}
+}
+
 @article{Kogan_1977,
  author = {Kogan, M. and Turnipseed, S. G. and Shepard, M. and Oliveira, E. B. De and Borgo, A.},
  title = {Pilot Insect Pest Management Program for Soybean in Southern Brazil1},
@@ -856,6 +1094,49 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  url = {https://doi.org/10.1371%2Fjournal.ppat.1008633},
  doi = {10.1371/journal.ppat.1008633},
  editor = {Herniou, Elisabeth A.}
+}
+
+@article{Kosakovsky_Pond_2005,
+ author = {Pond, Sergei L. Kosakovsky and Frost, Simon D. W.},
+ title = {Not So Different After All: A Comparison of Methods for Detecting Amino Acid Sites Under Selection},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2005},
+ month = {feb},
+ number = {5},
+ volume = {22},
+ pages = {1208--1222},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmsi105},
+ doi = {10.1093/molbev/msi105}
+}
+
+@article{Kosakovsky_Pond_2006,
+ author = {Pond, Sergei L. Kosakovsky and Posada, David and Gravenor, Michael B. and Woelk, Christopher H. and Frost, Simon D. W.},
+ title = {Automated Phylogenetic Detection of Recombination Using a Genetic Algorithm},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2006},
+ month = {jul},
+ number = {10},
+ volume = {23},
+ pages = {1891--1901},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmsl051},
+ doi = {10.1093/molbev/msl051}
+}
+
+@article{Kosakovsky_Pond_2019,
+ author = {Pond, Sergei L Kosakovsky and Poon, Art F Y and Velazquez, Ryan and Weaver, Steven and Hepler, N Lance and Murrell, Ben and Shank, Stephen D and Magalis, Brittany Rife and Bouvier, Dave and Nekrutenko, Anton and Wisotsky, Sadie and Spielman, Stephanie J and Frost, Simon D W and Muse, Spencer V},
+ title = {HyPhy 2.5—A Customizable Platform for Evolutionary Hypothesis Testing Using Phylogenies},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2019},
+ month = {aug},
+ number = {1},
+ volume = {37},
+ pages = {295--299},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmsz197},
+ doi = {10.1093/molbev/msz197},
+ editor = {Crandall, Keith}
 }
 
 @article{L_pez_Ferber_2003,
@@ -926,6 +1207,33 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  editor = {Sandri-Goldin, Rozanne M.}
 }
 
+@article{Larsson_2014,
+ author = {Larsson, Anders},
+ title = {AliView: a fast and lightweight alignment viewer and editor for large datasets},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2014},
+ month = {aug},
+ number = {22},
+ volume = {30},
+ pages = {3276--3278},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbtu531},
+ doi = {10.1093/bioinformatics/btu531}
+}
+
+@article{Layer_2014,
+ author = {Layer, Ryan M and Chiang, Colby and Quinlan, Aaron R and Hall, Ira M},
+ title = {LUMPY: a probabilistic framework for structural variant discovery},
+ journal = {Genome Biology},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2014},
+ number = {6},
+ volume = {15},
+ pages = {R84},
+ url = {https://doi.org/10.1186%2Fgb-2014-15-6-r84},
+ doi = {10.1186/gb-2014-15-6-r84}
+}
+
 @article{Leroy_2016,
  author = {Leroy, Baptiste and Gillet, Laurent and Vanderplasschen, Alain and Wattiez, Ruddy},
  title = {Structural Proteomics of Herpesviruses},
@@ -949,6 +1257,48 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  url = {https://doi.org/10.5772%2F32209},
  doi = {10.5772/32209},
  booktitle = {Viral Genomes - Molecular Structure, Diversity, Gene Expression Mechanisms and Host-Virus Interactions}
+}
+
+@article{Li_2009,
+ author = {Li, H. and Durbin, R.},
+ title = {Fast and accurate short read alignment with Burrows-Wheeler transform},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2009},
+ month = {may},
+ number = {14},
+ volume = {25},
+ pages = {1754--1760},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbtp324},
+ doi = {10.1093/bioinformatics/btp324}
+}
+
+@article{Li_2009a,
+ author = {Li, H. and Handsaker, B. and Wysoker, A. and Fennell, T. and Ruan, J. and Homer, N. and Marth, G. and Abecasis, G. and and, R. Durbin},
+ title = {The Sequence Alignment/Map format and SAMtools},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2009},
+ month = {jun},
+ number = {16},
+ volume = {25},
+ pages = {2078--2079},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbtp352},
+ doi = {10.1093/bioinformatics/btp352}
+}
+
+@article{Li_2015,
+ author = {Li, Dinghua and Liu, Chi-Man and Luo, Ruibang and Sadakane, Kunihiko and Lam, Tak-Wah},
+ title = {MEGAHIT: an ultra-fast single-node solution for large and complex metagenomics assembly via succinct de Bruijn graph},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2015},
+ month = {jan},
+ number = {10},
+ volume = {31},
+ pages = {1674--1676},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbtv033},
+ doi = {10.1093/bioinformatics/btv033}
 }
 
 @article{Li_2018,
@@ -993,6 +1343,20 @@ Spodoptera frugiperda
  pages = {588--598},
  url = {https://doi.org/10.1016%2Fj.pt.2016.04.008},
  doi = {10.1016/j.pt.2016.04.008}
+}
+
+@article{M_sz_ros_2018,
+ author = {Mészáros, Bálint and Erdős, Gábor and Dosztányi, Zsuzsanna},
+ title = {IUPred2A: context-dependent prediction of protein disorder as a function of redox state and protein binding},
+ journal = {Nucleic Acids Research},
+ publisher = {Oxford University Press (OUP)},
+ year = {2018},
+ month = {jun},
+ number = {W1},
+ volume = {46},
+ pages = {W329--W337},
+ url = {https://doi.org/10.1093%2Fnar%2Fgky384},
+ doi = {10.1093/nar/gky384}
 }
 
 @article{Marek_2011,
@@ -1065,6 +1429,21 @@ Spodoptera frugiperda
  doi = {10.1128/aem.35.2.411-421.1978}
 }
 
+@article{Minh_2020,
+ author = {Minh, Bui Quang and Schmidt, Heiko A and Chernomor, Olga and Schrempf, Dominik and Woodhams, Michael D and Haeseler, Arndt von and Lanfear, Robert},
+ title = {IQ-TREE 2: New Models and Efficient Methods for Phylogenetic Inference in the Genomic Era},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2020},
+ month = {feb},
+ number = {5},
+ volume = {37},
+ pages = {1530--1534},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmsaa015},
+ doi = {10.1093/molbev/msaa015},
+ editor = {Teeling, Emma}
+}
+
 @article{Moldov_n_2018,
  author = {Moldov{\'{a}}n, Norbert and Tomb{\'{a}}cz, D{\'{o}}ra and Sz{\H{u}}cs, Attila and Csabai, Zsolt and Bal{\'{a}}zs, Zsolt and Kis, Emese and Moln{\'{a}}r, Judit and Boldogk{\H{o}}i, Zsolt},
  title = {Third-generation Sequencing Reveals Extensive Polycistronism and Transcriptional Overlapping in a Baculovirus},
@@ -1117,6 +1496,21 @@ Spodoptera frugiperda
  pages = {257--289},
  url = {https://doi.org/10.1146%2Fannurev.ento.44.1.257},
  doi = {10.1146/annurev.ento.44.1.257}
+}
+
+@article{Murrell_2012,
+ author = {Murrell, Ben and Wertheim, Joel O. and Moola, Sasha and Weighill, Thomas and Scheffler, Konrad and Pond, Sergei L. Kosakovsky},
+ title = {Detecting Individual Sites Subject to Episodic Diversifying Selection},
+ journal = {PLoS Genetics},
+ publisher = {Public Library of Science (PLoS)},
+ year = {2012},
+ month = {jul},
+ number = {7},
+ volume = {8},
+ pages = {e1002764},
+ url = {https://doi.org/10.1371%2Fjournal.pgen.1002764},
+ doi = {10.1371/journal.pgen.1002764},
+ editor = {Malik, Harmit S.}
 }
 
 @article{Myers_2015,
@@ -1188,6 +1582,19 @@ Spodoptera frugiperda
  doi = {10.1007/s11262-020-01741-9}
 }
 
+@article{Obbard_2014,
+ author = {Obbard, Darren J and Dudas, Gytis},
+ title = {The genetics of host–virus coevolution in invertebrates},
+ journal = {Current Opinion in Virology},
+ publisher = {Elsevier BV},
+ year = {2014},
+ month = {oct},
+ volume = {8},
+ pages = {73--78},
+ url = {https://doi.org/10.1016%2Fj.coviro.2014.07.002},
+ doi = {10.1016/j.coviro.2014.07.002}
+}
+
 @article{Ohkawa_2010,
  author = {Ohkawa, Taro and Volkman, Loy E. and Welch, Matthew D.},
  title = {Actin-based motility drives baculovirus transit to the nucleus and cell surface},
@@ -1200,6 +1607,19 @@ Spodoptera frugiperda
  pages = {187--195},
  url = {https://doi.org/10.1083%2Fjcb.201001162},
  doi = {10.1083/jcb.201001162}
+}
+
+@article{Page_2016,
+ author = {Page, Andrew J. and Taylor, Ben and Delaney, Aidan J. and Soares, Jorge and Seemann, Torsten and Keane, Jacqueline A. and Harris, Simon R.},
+ title = {SNP-sites: rapid efficient extraction of SNPs from multi-FASTA alignments},
+ journal = {Microbial Genomics},
+ publisher = {Microbiology Society},
+ year = {2016},
+ month = {apr},
+ number = {4},
+ volume = {2},
+ url = {https://doi.org/10.1099%2Fmgen.0.000056},
+ doi = {10.1099/mgen.0.000056}
 }
 
 @article{Passarelli_2011,
@@ -1255,6 +1675,20 @@ Spodoptera frugiperda
  booktitle = {Methods in Molecular Biology}
 }
 
+@article{Rausch_2012,
+ author = {Rausch, T. and Zichner, T. and Schlattl, A. and Stutz, A. M. and Benes, V. and Korbel, J. O.},
+ title = {DELLY: structural variant discovery by integrated paired-end and split-read analysis},
+ journal = {Bioinformatics},
+ publisher = {Oxford University Press (OUP)},
+ year = {2012},
+ month = {sep},
+ number = {18},
+ volume = {28},
+ pages = {i333--i339},
+ url = {https://doi.org/10.1093%2Fbioinformatics%2Fbts378},
+ doi = {10.1093/bioinformatics/bts378}
+}
+
 @article{Renner_2017,
  author = {Renner, Daniel W. and Szpara, Moriah L.},
  title = {Impacts of Genome-Wide Analyses on Our Understanding of Human Herpesvirus Diversity and Evolution},
@@ -1281,6 +1715,20 @@ Spodoptera frugiperda
  pages = {351--357},
  url = {https://doi.org/10.1007%2Fs11262-014-1113-5},
  doi = {10.1007/s11262-014-1113-5}
+}
+
+@article{Sayers_2010,
+ author = {Sayers, E. W. and Barrett, T. and Benson, D. A. and Bolton, E. and Bryant, S. H. and Canese, K. and Chetvernin, V. and Church, D. M. and DiCuccio, M. and Federhen, S. and Feolo, M. and Fingerman, I. M. and Geer, L. Y. and Helmberg, W. and Kapustin, Y. and Landsman, D. and Lipman, D. J. and Lu, Z. and Madden, T. L. and Madej, T. and Maglott, D. R. and Marchler-Bauer, A. and Miller, V. and Mizrachi, I. and Ostell, J. and Panchenko, A. and Phan, L. and Pruitt, K. D. and Schuler, G. D. and Sequeira, E. and Sherry, S. T. and Shumway, M. and Sirotkin, K. and Slotta, D. and Souvorov, A. and Starchenko, G. and Tatusova, T. A. and Wagner, L. and Wang, Y. and Wilbur, W. J. and Yaschenko, E. and Ye, J.},
+ title = {Database resources of the National Center for Biotechnology Information},
+ journal = {Nucleic Acids Research},
+ publisher = {Oxford University Press (OUP)},
+ year = {2010},
+ month = {nov},
+ number = {Database},
+ volume = {39},
+ pages = {D38--D51},
+ url = {https://doi.org/10.1093%2Fnar%2Fgkq1172},
+ doi = {10.1093/nar/gkq1172}
 }
 
 @article{Sciocco_Cap_2001,
@@ -1323,6 +1771,34 @@ Spodoptera frugiperda
  doi = {10.1128/jvi.01509-17}
 }
 
+@article{Silver_2019,
+ author = {Silver, Andrew},
+ title = {Caterpillar's devastating march across China spurs hunt for native predator},
+ journal = {Nature},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2019},
+ month = {jun},
+ number = {7761},
+ volume = {570},
+ pages = {286--287},
+ url = {https://doi.org/10.1038%2Fd41586-019-01867-3},
+ doi = {10.1038/d41586-019-01867-3}
+}
+
+@article{Sim_n_2011,
+ author = {Simón, Oihane and Palma, Leopoldo and Beperet, Inés and Muñoz, Delia and López-Ferber, Miguel and Caballero, Primitivo and Williams, Trevor},
+ title = {Sequence comparison between three geographically distinct Spodoptera frugiperda multiple nucleopolyhedrovirus isolates: Detecting positively selected genes},
+ journal = {Journal of Invertebrate Pathology},
+ publisher = {Elsevier BV},
+ year = {2011},
+ month = {may},
+ number = {1},
+ volume = {107},
+ pages = {33--42},
+ url = {https://doi.org/10.1016%2Fj.jip.2011.01.002},
+ doi = {10.1016/j.jip.2011.01.002}
+}
+
 @article{Sim_n_2012,
  author = {Sim{\'{o}}n, Oihane and Williams, Trevor and L{\'{o}}pez-Ferber, Miguel and Caballero, Primitivo},
  title = {Deletion of egt is responsible for the fast-killing phenotype of natural deletion genotypes in a Spodoptera frugiperda multiple nucleopolyhedrovirus population},
@@ -1362,6 +1838,20 @@ Spodoptera frugiperda
  doi = {10.1128/jvi.79.16.10578-10588.2005}
 }
 
+@article{Smith_2015,
+ author = {Smith, Martin D. and Wertheim, Joel O. and Weaver, Steven and Murrell, Ben and Scheffler, Konrad and Pond, Sergei L. Kosakovsky},
+ title = {Less Is More: An Adaptive Branch-Site Random Effects Model for Efficient Detection of Episodic Diversifying Selection},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2015},
+ month = {feb},
+ number = {5},
+ volume = {32},
+ pages = {1342--1353},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmsv022},
+ doi = {10.1093/molbev/msv022}
+}
+
 @article{Sparks_1979,
  author = {Sparks, Alton N.},
  title = {A Review of the Biology of the Fall Armyworm},
@@ -1388,6 +1878,20 @@ Spodoptera frugiperda
  pages = {759--769},
  url = {https://doi.org/10.1016%2Fj.tplants.2017.06.010},
  doi = {10.1016/j.tplants.2017.06.010}
+}
+
+@article{Stokstad_2017,
+ author = {Stokstad, Erik},
+ title = {New crop pest takes Africa at lightning speed},
+ journal = {Science},
+ publisher = {American Association for the Advancement of Science (AAAS)},
+ year = {2017},
+ month = {may},
+ number = {6337},
+ volume = {356},
+ pages = {473--474},
+ url = {https://doi.org/10.1126%2Fscience.356.6337.473},
+ doi = {10.1126/science.356.6337.473}
 }
 
 @article{Szewczyk_2006,
@@ -1696,6 +2200,20 @@ Spodoptera frugiperda
  editor = {Sandri-Goldin, Rozanne M.}
 }
 
+@article{Weaver_2018,
+ author = {Weaver, Steven and Shank, Stephen D and Spielman, Stephanie J and Li, Michael and Muse, Spencer V and Pond, Sergei L Kosakovsky},
+ title = {Datamonkey 2.0: A Modern Web Application for Characterizing Selective and Other Evolutionary Processes},
+ journal = {Molecular Biology and Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2018},
+ month = {jan},
+ number = {3},
+ volume = {35},
+ pages = {773--777},
+ url = {https://doi.org/10.1093%2Fmolbev%2Fmsx335},
+ doi = {10.1093/molbev/msx335}
+}
+
 @article{Williams_2017,
  author = {Williams, Trevor and Virto, Cristina and Murillo, Rosa and Caballero, Primitivo},
  title = {Covert Infection of Insects by Baculoviruses},
@@ -1706,6 +2224,34 @@ Spodoptera frugiperda
  volume = {8},
  url = {https://doi.org/10.3389%2Ffmicb.2017.01337},
  doi = {10.3389/fmicb.2017.01337}
+}
+
+@article{Wilm_2012,
+ author = {Wilm, Andreas and Aw, Pauline Poh Kim and Bertrand, Denis and Yeo, Grace Hui Ting and Ong, Swee Hoe and Wong, Chang Hua and Khor, Chiea Chuen and Petric, Rosemary and Hibberd, Martin Lloyd and Nagarajan, Niranjan},
+ title = {LoFreq: a sequence-quality aware, ultra-sensitive variant caller for uncovering cell-population heterogeneity from high-throughput sequencing datasets},
+ journal = {Nucleic Acids Research},
+ publisher = {Oxford University Press (OUP)},
+ year = {2012},
+ month = {oct},
+ number = {22},
+ volume = {40},
+ pages = {11189--11201},
+ url = {https://doi.org/10.1093%2Fnar%2Fgks918},
+ doi = {10.1093/nar/gks918}
+}
+
+@article{Wolff_2008,
+ author = {Wolff, José Luiz Caldas and Valicente, Fernando Hercos and Martins, Renata and Castro Oliveira, Juliana Velasco de and Andrade Zanotto, Paolo Marinho de},
+ title = {Analysis of the genome of Spodoptera frugiperda nucleopolyhedrovirus (SfMNPV-19) and of the high genomic heterogeneity in group II nucleopolyhedroviruses},
+ journal = {Journal of General Virology},
+ publisher = {Microbiology Society},
+ year = {2008},
+ month = {may},
+ number = {5},
+ volume = {89},
+ pages = {1202--1211},
+ url = {https://doi.org/10.1099%2Fvir.0.83581-0},
+ doi = {10.1099/vir.0.83581-0}
 }
 
 @article{Wolgamot_1993,
