Add chapter 3 variants results

--- a/source/references.bib
+++ b/source/references.bib
@@ -657,6 +657,19 @@
  doi = {10.1073/pnas.1609243114}
 }
 
+@article{Gilbert_2014,
+ author = {Gilbert, Clément and Chateigner, Aurélien and Ernenwein, Lise and Barbe, Valérie and Bézier, Annie and Herniou, Elisabeth A. and Cordaux, Richard},
+ title = {Population genomics supports baculoviruses as vectors of horizontal transfer of insect transposons},
+ journal = {Nature Communications},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2014},
+ month = {feb},
+ number = {1},
+ volume = {5},
+ url = {https://doi.org/10.1038%2Fncomms4348},
+ doi = {10.1038/ncomms4348}
+}
+
 @article{Goergen_2016,
  author = {Goergen, Georg and Kumar, P. Lava and Sankung, Sagnia B. and Togola, Abou and Tam{\`{o}}, Manuele},
  title = {First Report of Outbreaks of the Fall Armyworm Spodoptera frugiperda (J E Smith) (Lepidoptera, Noctuidae), a New Alien Invasive Pest in West and Central Africa},
@@ -1331,6 +1344,19 @@ Spodoptera frugiperda
  doi = {10.1002/ps.5812}
 }
 
+@article{Loiseau_2020,
+ author = {Loiseau, Vincent and Herniou, Elisabeth A and Moreau, Yannis and Lévêque, Nicolas and Meignin, Carine and Daeffler, Laurent and Federici, Brian and Cordaux, Richard and Gilbert, Clément},
+ title = {Wide spectrum and high frequency of genomic structural variation, including transposable elements, in large double-stranded DNA viruses},
+ journal = {Virus Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2020},
+ month = {jan},
+ number = {1},
+ volume = {6},
+ url = {https://doi.org/10.1093%2Fve%2Fvez060},
+ doi = {10.1093/ve/vez060}
+}
+
 @article{Lu_2016,
  author = {Lu, Dihong and Baiocchi, Tiffany and Dillman, Adler R.},
  title = {Genomics of Entomopathogenic Nematodes and Implications for Pest Control},
@@ -1743,6 +1769,20 @@ Spodoptera frugiperda
  pages = {3702--3706},
  url = {https://doi.org/10.1128%2Faem.67.8.3702-3706.2001},
  doi = {10.1128/aem.67.8.3702-3706.2001}
+}
+
+@article{Serrano_2012,
+ author = {Serrano, Amaya and Williams, Trevor and Simón, Oihane and López-Ferber, Miguel and Caballero, Primitivo and Muñoz, Delia},
+ title = {Analagous Population Structures for Two Alphabaculoviruses Highlight a Functional Role for Deletion Mutants},
+ journal = {Applied and Environmental Microbiology},
+ publisher = {American Society for Microbiology},
+ year = {2012},
+ month = {nov},
+ number = {4},
+ volume = {79},
+ pages = {1118--1125},
+ url = {https://doi.org/10.1128%2Faem.03021-12},
+ doi = {10.1128/aem.03021-12}
 }
 
 @article{Shapiro_2000,
